<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="414dp"
        android:layout_height="528dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo_vertical" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_sign_up"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="55dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="368dp"
        android:autofillHints="enter first name"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintTop_toTopOf="@+id/logo"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:autofillHints="enter last name"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/username"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:autofillHints="enter email address"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="468dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:autofillHints="enter password"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="6dp"
        android:selectAllOnFocus="true"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>