<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="404dp"
        android:layout_height="413dp"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/rec_center_lyon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/map" />

    <Button
        android:id="@+id/btn_my_reservations"
        android:layout_width="183dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/my_reservations"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/rec_center_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/rec_center_lyon"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:backgroundTint="#343A40"
        android:text="@string/lyon_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/rec_center_village"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rec_center_village"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#343A40"
        android:text="@string/usc_village_rec_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/rec_center_aquatics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/rec_center_aquatics"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#343A40"
        android:text="@string/uytengsu_aquatics_center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rec_center_header"
        android:layout_width="288dp"
        android:layout_height="36dp"
        android:text="@string/select_a_rec_center"
        android:textAlignment="center"
        android:textColor="@color/gray_trojan"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>