<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/btn_login"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="318dp"
            android:layout_height="284dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/tommy"
            app:srcCompat="@drawable/tommy_trojan" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"

        android:text="@string/tommy_trojan"
        android:textAlignment="center"
        android:textColor="@color/gray_trojan"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/usc_id_123456780"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_my_reservations"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/inter"
        android:text="@string/my_reservations"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background= "@color/white"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_logout"
            android:fontFamily="@font/inter"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            />

    </RelativeLayout>

</LinearLayout>