<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BookingPage"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gym_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/SUMMARY_PAGE_TITLE"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <Button
            android:layout_marginStart="30sp"
            android:id="@+id/btn_today"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50sp"
            app:backgroundTint="@null"
            android:background="@drawable/timeslot_book_background"
            android:text="@string/today"
            android:textColor="@color/gold"
            android:textSize="20sp" />

        <Button
            android:layout_marginStart="50sp"
            android:id="@+id/btn_tomorrow"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="50sp"
            app:backgroundTint="@null"
            android:background="@drawable/timeslot_full_background"
            android:text="@string/tomorrow"
            android:textColor="@color/gold"
            android:textSize="20sp" />
    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>